[gd_scene load_steps=2 format=3 uid="uid://bssq4sgddohxt"]

[ext_resource type="Script" uid="uid://ddtnbt6k4vci1" path="res://Scenes/UI/in_game_UI/hit_notification.gd" id="1_dspu1"]

[node name="hitNotification" type="Node2D"]
z_index = 5
script = ExtResource("1_dspu1")

[node name="lblCombo" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
text = "combo"

[node name="lblDamage" type="Label" parent="."]
offset_top = 24.0
offset_right = 55.0
offset_bottom = 47.0
text = "damage"

[node name="tmrDespawn" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[connection signal="timeout" from="tmrDespawn" to="." method="_on_tmr_despawn_timeout"]
